perf(core): establish JFR hot-path baseline